--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 #
 
 # Site settings
-title: Spectral
+title: History in Vienna
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
+  Geschichten aus einer
+  geschichtsträchtigen
+  Stadt im Herzen [Europas](http://euriopa.eu)
 owner: Your Name # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: your-email@domain.com
